Amended project files

--- a/experience.html
+++ b/experience.html
@@ -16,6 +16,7 @@
             <li class="name">Andy Stevens</li>
             <li><a href="index.html" target="_blank">Home</a></li>
             <li><a href="experience.html" target="_blank">Experience</a></li>
+            <li><a href="contact.html" target="_blank">Contact</a></li>
         </ul>
     </div>
 
@@ -23,28 +24,107 @@
         <img src="images/Family holiday.jpg" alt="Picture of Andy Stevens with his family on holiday"
             class="profile-image">
         <h1 class="tag name">Experience</h1>
-        <p class="tag location">Below I have listed my experience and provided links to projects I have been involved in.</p>
+        <p class="tag location">Below I have listed my work experience, skills and provided links to projects I have been involved in.</p>
     </header>
 
     <main class="flex">
         <div class="card">
-            <h2>Background</h2>
+            <h2>Work Experience<h2>
+            <ul class="skills">
+                <li>Implement new business IT strategies</li>
+                <li>Created a number of web applications</li>
+                <ul>
+                    <li>Employee telephone directory</li>
+                    <li>New starter web application</li>
+                    <li>Right to erasure application</li>
+                    <li>Service request application</li>
+                </ul>
+                <li>cleansed data prior to migration into Salesforce</li>
+                <li>Automated reports using Google Sheets</li>
+                <li>Create internal procedural documentation and KPI</li>
+                <li>Talked staff through actions face to face, remotely or over the phone to help setup systems or resolve issues</li>
+                <li>Troubleshot system and network problems</li>
+                <li>Diagnosed hardware and software faults</li>
+                <li>Provided support, procedural documentation and relevant reports</li>
+                <li>Setup new users’ accounts and profiles and dealt with password issues</li>
+                <li>Responded within agreed Service Level Agreements to call outs</li>
+                <li>Handled administrative functions, user account maintenance, reports, dashboards, and workflows</li>
+                <li>Complete regular internal system audits and prepare for upgrades</li>
+                <li>Coordinate the evaluation, scope and completion of new development requests.</li>
+                <li>Assist in training of new users</li>
+                <li>Effectively act as the liaison between our users, vendors and the application development teams</li>
+                <li>Prioritised and managed many open cases at one time</li>
+                <li>Tested and evaluated new technology</li>
+            </ul>
             
         </div>
 
         <div class="card">
-            
+            <h2>Skills</h2>
+            <p>I am proficient in the following languages</p>
+            <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>SQL</li>
+            </ul>
+            <p>In addition to the core languages above, I am also experienced in using the following frameworks and libraries</p>
+            <ul class="skills">
+                <li>React.js</li>
+                <li>Node.js</li>
+                <li>Bootstrap</li>
+                <li>jQuery</li>
+            </ul>
+            <p>Through out my career I have developed a number of transferrable skills</p>
+            <ul class="skills">
+                <li>Team Work</li>
+                <li>Problem Solving</li>
+                <li>Decision Making</li>
+                <li>Time Management</li>
+                <li>Listening</li>
+                <li>Written Communication</li>
+                <li>Verbal Communication</li>
+                <li>Reasearch, analyse and evaluate information</li>
+                <li>Numeracy</li>
+                <li>Personal development</li>
+            </ul>
+            <p>I have also developed the following soft and interpersonal skills</p>
+            <ul class="skills">
+                <li>Self-motivation</li>
+                <li>Responsibility</li>
+                <li>Decisiveness</li>
+                <li>Flexibility</li>
+                <li>Work well under pressure</li>
+                <li>Negotiation and Conflict Resolution</li>
+            </ul>
         </div>
+
+        <div class="card">
+            <h2>Projects</h2>
+            <p>Listed below are some of the projects I have been involved in, either commercially for Age UK Essex or personally, whilst studying to improve my knowledge</p>
+            <ul class="skills project_list">
+                <li><a href="/techdegree-project-1/web projects/Contact Form/index.html" target="_blank">Contact Form</a></li>
+                <li><a href="/techdegree-project-1/web projects/firstReactElement/index.html" target="_blank">First React Element</a></li>
+                <li><a href="/techdegree-project-1/web projects/IT Service desk/" target="_blank">IT Service Desk</a></li>
+                <li><a href="/techdegree-project-1/web projects/Knowledge Base/index.html" target="_blank">Knowledge Base</a></li>
+                <li><a href="/techdegree-project-1/web projects/New Starter/index.html" target="_blank">New Starter</a></li>
+                <li><a href="/techdegree-project-1/web projects/Pets/index.html" target="_blank">Pet Directory</a></li>
+                <li><a href="/techdegree-project-1/web projects/Request to be forgotten/index.html" target="_blank">Request to be forgotten</a></li>
+                <li><a href="/techdegree-project-1/web projects/scoreboard/index.html" target="_blank">Scoreboard</a></li>
+                <li><a href="/techdegree-project-1/web projects/Travel Expenses/index.html" target="_blank">Travel Expenses</a></li>
+                <li><a href="/techdegree-project-1/web projects/lakeTahoe/index.html" target="_blank">Lake Tahoe</a></li>
+            </ul>
+        </div>
+
 
     </main>
     <footer>
         <ul>
-            <li><a href="#" class="social twitter">Twitter</a></li>
-            <li><a href="#" class="social linkedin">LinkedIn</a></li>
-            <li><a href="#" class="social github">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/andy-s-842095171/" target="_blank" class="social linkedin">LinkedIn</a></li>
+            <li><a href="https://github.com/apstevens" target="_blank" class="social github">Github</a></li>
         </ul>
         <p class="copyright">Copyright 2020, Andy Stevens</p>
     </footer>
-</body>
-
-</html>
+</
