--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Andy Stevens</li>
           <li><a href="index.html" target="_blank">Home</a></li>
           <li><a href="experience.html" target="_blank">Experience</a></li>
+          <li><a href="contact.html" target="_blank">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/Family holiday.jpg" alt="Picture of Andy Stevens with his family on holiday" class="profile-image">
@@ -28,6 +29,7 @@
         <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to 
           bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a semi-professional boxer and am a life-long learner who's always interested in expanding my skills.</p>
+        <img src="/techdegree-project-1/images/coding.jpg" alt="Coding example" class="background-image">
       </div> 
 
       <div class="card">
@@ -46,15 +48,35 @@
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
+      <div class="card">
+        <h2>Hobbies and interests</h2>
+        <p>I have a varied interest in things, I'm very active having completed a number of endurance events for fun and competing in both Muay Thai and Boxing.</p>
+        <p>Outside of sport I love to learn and will often spend an hour or more studying.</p>
+        <p>You can see some of my favourite hobbies and interests below.</p>
+        <ul class="skills">
+          <li>Muay Thai</li>
+          <li>BJJ</li>
+          <li>Running</li>
+          <li>Rugby</li>
+          <li>Swimming</li>
+          <li>Weights</li>
+          <li>Reading</li>
+          <li>Learning</li>
+          <li>Gaming</li>
+          <li>Socialising</li>
+          <li>Theatre</li>
+          <li>Cinema</li>
+          <li>Music</li>
+        </ul>
+      </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/andy-s-842095171/" target="_blank" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/apstevens" target="_blank" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2020, Andy Stevens</p>
+      <p class="copyright">&copy; Copyright 2020, Andy Stevens</p>
     </footer>
   </body>
   </html>
