Amendments made to files

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </nav>
 
     <header>
-        <img src="images/Family holiday.jpg" alt="Picture of Andy Stevens with his family on holiday"
+        <img src="images/family_holiday.jpg" alt="Picture of Andy Stevens with his family on holiday"
             class="profile-image">
         <h1 class="tag name">Contact me.</h1>
         <p class="tag location">Get in touch below.</p>
@@ -30,12 +30,12 @@
     <main class="flex">
         <div class="card">
             <h2>Email</h2>
-            <p>Contact me via email <a href="mailto:apstevens@shayledevops.co.uk?subject:=Request for infomration" target="_blank">Here: &#9993;</a></p>
+            <p>Contact me via email <a href="mailto:apstevens@shayledevops.co.uk?subject=Request%20for%20information" target="_blank" class="contact">&#9993;</a></p>
         </div>
 
         <div class="card">
             <h2>Telephone</h2>
-            <p>Contact me via telephone <a href="tel:07485041755" target="_blank">Here: &phone;</a></p>
+            <p>Contact me via telephone <a href="tel:07485041755" target="_blank" class="contact">&phone;</a></p>
         </div>
     </main>
     <footer>
