--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
 
     <header>
-      <img src="images/Family holiday.jpg" alt="Picture of Andy Stevens with his family on holiday" class="profile-image">
+      <img src="images/family_holiday.jpg" alt="Picture of Andy Stevens with his family on holiday" class="profile-image">
       <h1 class="tag name">Hello, I’m Andy.</h1>
       <p class="tag location">My home is Wickford, Essex.</p>
     </header>
@@ -29,7 +29,7 @@
         <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to 
           bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a semi-professional boxer and am a life-long learner who's always interested in expanding my skills.</p>
-        <img src="/techdegree-project-1/images/coding.jpg" alt="Coding example" class="background-image">
+        <img src="images/coding.jpg" alt="Coding example" class="background-image">
       </div> 
 
       <div class="card">
