--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,19 @@
 
 <body>
 
+    <div class="header-image"></div>
+
     <nav class="main-nav">
         <ul class="nav">
             <li class="name">Andy Stevens</li>
-            <li><a href="index.html" target="_blank">Home</a></li>
-            <li><a href="experience.html" target="_blank">Experience</a></li>
-            <li><a href="contact.html" target="_blank">Contact</a></li>
+            <li><a href="index.html" target="_self">Home</a></li>
+            <li><a href="experience.html" target="_self">Experience</a></li>
+            <li><a href="contact.html" target="_self">Contact</a></li>
         </ul>
     </nav>
 
-    <header>
-        <img src="images/family_holiday.jpg" alt="Picture of Andy Stevens with his family on holiday"
-            class="profile-image">
+    <header id="top">
+        <img src="images/rsz_office_pic.jpg" alt="Picture of Andy Stevens" class="profile-image">
         <h1 class="tag name">Contact me.</h1>
         <p class="tag location">Get in touch below.</p>
     </header>
@@ -44,6 +45,7 @@
             <li><a href="https://github.com/apstevens" target="_blank" class="social github">Github</a></li>
         </ul>
         <p class="copyright">&copy; Copyright 2020, Andy Stevens</p>
+        <a href="#top" class="copyright">Back to top &raquo;</a>
     </footer>
 </body>
 
