--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
+    <div class="header-image"></div>
 
     <nav class="main-nav">
         <ul class="nav">
           <li class="name">Andy Stevens</li>
-          <li><a href="index.html" target="_blank">Home</a></li>
-          <li><a href="experience.html" target="_blank">Experience</a></li>
-          <li><a href="contact.html" target="_blank">Contact</a></li>
+          <li><a href="index.html" target="_self">Home</a></li>
+          <li><a href="experience.html" target="_self">Experience</a></li>
+          <li><a href="contact.html" target="_self">Contact</a></li>
         </ul>
       </nav>
 
-    <header>
-      <img src="images/family_holiday.jpg" alt="Picture of Andy Stevens with his family on holiday" class="profile-image">
+    <header id="top">
+      <img src="images/rsz_office_pic.jpg" alt="Picture of Andy Stevens" class="profile-image">
       <h1 class="tag name">Hello, I’m Andy.</h1>
-      <p class="tag location">My home is Wickford, Essex.</p>
+      <p class="tag location">Welcome to my site. Here you'll find my background, goals, aspirations and achievements.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to 
-          bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’m an aspiring web designer who loves everything about the web. There is no better feeling than taking someones vision even my own and bringing it to life digitally 
+          for the world to see. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of 
+          building fantastic looking websites.</p>
         <p>I’ve been a semi-professional boxer and am a life-long learner who's always interested in expanding my skills.</p>
         <img src="images/coding.jpg" alt="Coding example" class="background-image">
       </div> 
@@ -46,7 +48,7 @@
           <li>React.js</li>
           <li>Node.js</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I'd like to pursue a career in development and help clients build an impressive online presence.</p>
       </div> 
       <div class="card">
         <h2>Hobbies and interests</h2>
@@ -77,6 +79,8 @@
         <li><a href="https://github.com/apstevens" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">&copy; Copyright 2020, Andy Stevens</p>
+      <a href="#top" class="copyright">Back to top &raquo;</a>
     </footer>
+
   </body>
   </html>
