Amended div tags to section in project starter files and updated the transition and scale attributes

--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="flex">
-        <div class="card">
+        <section class="card">
             <h2>Work Experience</h2>
                     <ul class="work-experience">
                         <li>Implement new business IT strategies</li>
@@ -55,9 +55,9 @@
                         <li>Tested and evaluated new technology</li>
                     </ul>
 
-        </div>
+        </section>
 
-        <div class="card">
+        <section class="card">
             <h2>Skills</h2>
             <p>I am proficient in the following languages</p>
             <ul class="skills">
@@ -107,9 +107,9 @@
                 <li>Work well under pressure</li>
                 <li>Negotiation and Conflict Resolution</li>
             </ul>
-        </div>
+        </section>
 
-        <div class="card">
+        <section class="card">
             <h2>Projects</h2>
             <p>Listed below are projects I have been involved in commercially, these were web applications developed using Google Apps Script.</p>
             <ul class="skills project_list">
@@ -179,13 +179,12 @@
                     <img src="images/hyperlink.png" alt="Hyperlink" class="hyperlink-image">
                 </li>
             </ul>
-        </div>
+        </section>
     </main>
 
     <footer>
         <ul>
-            <li><a href="https://www.linkedin.com/in/andy-s-842095171/" target="_blank"
-                    class="social linkedin">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/andy-s-842095171/" target="_blank" class="social linkedin">LinkedIn</a></li>
             <li><a href="https://github.com/apstevens" target="_blank" class="social github">Github</a></li>
         </ul>
         <p class="copyright">Copyright 2020, Andy Stevens</p>
