--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,15 @@
     </header>
 
     <main class="flex">
-        <div class="card">
+        <section class="card">
             <h2>Email</h2>
             <p>Contact me via email <a href="mailto:apstevens@shayledevops.co.uk?subject=Request%20for%20information" target="_blank" class="contact">&#9993;</a></p>
-        </div>
+        </section>
 
-        <div class="card">
+        <section class="card">
             <h2>Telephone</h2>
             <p>Contact me via telephone <a href="tel:07485041755" target="_blank" class="contact">&phone;</a></p>
-        </div>
+        </section>
     </main>
     <footer>
         <ul>
