--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who loves everything about the web. There is no better feeling than taking someones vision even my own and bringing it to life digitally 
           for the world to see. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of 
           building fantastic looking websites.</p>
         <p>I’ve been a semi-professional boxer and am a life-long learner who's always interested in expanding my skills.</p>
         <img src="images/coding.jpg" alt="Coding example" class="background-image">
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -49,7 +49,7 @@
           <li>Node.js</li>
         </ul>
         <p>I'd like to pursue a career in development and help clients build an impressive online presence.</p>
-      </div> 
+      </section> 
       <div class="card">
         <h2>Hobbies and interests</h2>
         <p>I have a varied interest in things, I'm very active having completed a number of endurance events for fun and competing in both Muay Thai and Boxing.</p>
