Amended project starter files div tag changed to section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
         <p>I'd like to pursue a career in development and help clients build an impressive online presence.</p>
       </section> 
-      <div class="card">
+      <section class="card">
         <h2>Hobbies and interests</h2>
         <p>I have a varied interest in things, I'm very active having completed a number of endurance events for fun and competing in both Muay Thai and Boxing.</p>
         <p>Outside of sport I love to learn and will often spend an hour or more studying.</p>
@@ -70,7 +70,7 @@
           <li>Cinema</li>
           <li>Music</li>
         </ul>
-      </div>
+      </section>
 
     </main>
     <footer>
